<resources>
    <string name="app_name">PackageManager</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="registration_name_hint">Name</string>
    <string name="registration_store_num_hint">Store Number</string>
    <string name="registration_password_hint">Password (Minimum 5 characters)</string>
    <string name="registration_confirm_password_hint">Confirm Password</string>
    <string name="registration_button_txt">Register</string>
    <string name="incorrect_registration_input_toast_message">Please enter valid details</string>
    <string name="registeration_success_greeting">Successfully Registered!</string>
    <string name="login_button_str">LOGIN</string>
    <string name="login_password_hint">Password</string>
    <string name="login_employee_id_hint">Employee ID</string>
    <string name="admin_login_sign_up_btn_txt">SIGN UP</string>
    <string name="show_orders_btn_txt">Show Orders</string>
</resources>
