<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/parent_layout_margin"
            tools:context=".view.Registration.RegistrationActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="REGISTER"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_margin="@dimen/vertical_spacing_between_views"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registration_name_hint"
                    android:id="@+id/registrationNameET"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_margin="@dimen/vertical_spacing_between_views"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registration_store_num_hint"
                    android:id="@+id/registrationStoreNumET"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_margin="@dimen/vertical_spacing_between_views"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registration_password_hint"
                    android:inputType="textPassword"
                    android:id="@+id/registrationPasswordET"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_margin="@dimen/vertical_spacing_between_views"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registration_confirm_password_hint"
                    android:inputType="textPassword"
                    android:id="@+id/registrationConfirmPasswordET"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/registrationBtn"
                android:onClick="registerClicked"
                android:layout_margin="@dimen/vertical_spacing_between_views"
                android:text="@string/registration_button_txt"/>

        </LinearLayout>

    </ScrollView>


</layout>
