<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_margin="@dimen/parent_layout_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.AdminLoginActivity">
            <ImageView
                android:id="@+id/box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/box_128"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/adminLoginEmpIdTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_margin="@dimen/vertical_spacing_between_views"
                app:layout_constraintTop_toBottomOf="@id/box"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/adminLoginPasswordTIL">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_employee_id_hint"
                    android:id="@+id/adminLoginEmpIdET"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/adminLoginPasswordTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_margin="@dimen/vertical_spacing_between_views"
                app:layout_constraintTop_toBottomOf="@id/adminLoginEmpIdTIL"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/adminLoginBtn">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/login_password_hint"
                    android:id="@+id/adminLoginPasswordET"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/adminLoginBtn"
                android:layout_margin="@dimen/vertical_spacing_between_views"
                style="@style/CustomButton"
                app:layout_constraintTop_toBottomOf="@id/adminLoginPasswordTIL"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/login_button_str"
                android:onClick="loginBtnClicked"/>

            <Button
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/vertical_spacing_between_views"
                app:layout_constraintTop_toBottomOf="@id/adminLoginBtn"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginBottom="@dimen/vertical_spacing_between_views"
                android:text="@string/admin_login_sign_up_btn_txt"
                android:onClick="signUpClicked"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>

